July 31st, 2023 changes

--- a/src/main/resources/rcl_messages_en.properties
+++ b/src/main/resources/rcl_messages_en.properties
@@ -123,13 +123,11 @@ download.dataset.error=ERR:704 Get datasets list failed. Please contact %s1.
 
 ack.no.message.id=ERR800: The local dataset has not been uploaded yet.
 
-ack.file.not.found=ERR802: Cannot process the acknowledgement.
-
 # get ack (refresh status)
-ack.not.available=ERR803: No acknowledgment was found for the report.
+ack.not.available=ERR803: No acknowledgment was found for the report. You can log into DCF to check the status or contact support on %s1
 
 # ack log KO but no log errors found
-ack.ko.no.errors=ERR806: Refresh status failed. Unknown error occurred. Please contact %s1.
+ack.ko.no.errors=ERR806: No acknowledgment was found for the report. You can log into DCF to check the status or contact support on %s1
 
 # s1: ack error
 ack.discarded=ERR807: The message was discarded due to the following error: %s1
